--- a/ice-cream-dataops/modules/bootcamp/ice_cream_api/workflows/wf_icapi_data_pipeline.WorkFlowVersion.yaml
+++ b/ice-cream-dataops/modules/bootcamp/ice_cream_api/workflows/wf_icapi_data_pipeline.WorkFlowVersion.yaml
@@ -35,6 +35,7 @@ workflowDefinition:
     parameters:
       function:
         externalId: oee_timeseries
+        data: { "lookback_minutes": 1440 }
     retries: 3
     timeout: 3600
     onFailure: abortWorkflow
